// Copyright 2021 CYBERCRYPT
//
// Licensed under the Apache License, Version 2.0 (the "License");
// you may not use this file except in compliance with the License.
// You may obtain a copy of the License at
//
//     http://www.apache.org/licenses/LICENSE-2.0
//
// Unless required by applicable law or agreed to in writing, software
// distributed under the License is distributed on an "AS IS" BASIS,
// WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
// See the License for the specific language governing permissions and
// limitations under the License.
syntax = "proto3";

package scopes;
option go_package = "encryption-service/scopes";

enum UserScope{
  READ = 0;
  CREATE = 1;
  INDEX = 2;
  OBJECTPERMISSIONS = 3;
  USERMANAGEMENT = 4;
}

message AccessTokenClient{
  bytes user_id = 1;
  repeated scopes.UserScope user_scopes = 2;
  int64 expiry_time = 3;
}
