// Copyright 2021 CYBERCRYPT
//
// Licensed under the Apache License, Version 2.0 (the "License");
// you may not use this file except in compliance with the License.
// You may obtain a copy of the License at
//
//     http://www.apache.org/licenses/LICENSE-2.0
//
// Unless required by applicable law or agreed to in writing, software
// distributed under the License is distributed on an "AS IS" BASIS,
// WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
// See the License for the specific language governing permissions and
// limitations under the License.
syntax = "proto3";

package enc;
option go_package = "encryption-service/enc";


service Encryptonize{
  // Stores an object
  rpc Store (StoreRequest) returns (StoreResponse){}

  // Retrieves an object
  rpc Retrieve (RetrieveRequest) returns (RetrieveResponse){}

  // Updates-Rewrites an object
  rpc Update (UpdateRequest) returns (UpdateResponse){}

  // Deletes an object
  rpc Delete (DeleteRequest) returns (DeleteResponse){}

  // Returns list of users with permission to decrypt the Package
  rpc GetPermissions (GetPermissionsRequest) returns (GetPermissionsResponse){}

  // Adds permission to an object
  rpc AddPermission (AddPermissionRequest) returns (AddPermissionResponse){}

  // Removes permission from an object
  rpc RemovePermission (RemovePermissionRequest) returns (RemovePermissionResponse){}
}

message StoreRequest{
  Object object = 1;
}

message StoreResponse{
  string object_id = 1;
}

message RetrieveRequest{
  string object_id = 1;
}

message RetrieveResponse{
  Object object = 1;
}

message UpdateRequest{
  Object object = 1;
  string object_id = 2;
}

message UpdateResponse{
}

message DeleteRequest{
  string object_id = 1;
}

message DeleteResponse{
}

message GetPermissionsRequest{
  string object_id = 1;
}

message GetPermissionsResponse{
  repeated string user_ids = 1;
}

message AddPermissionRequest{
  string object_id = 1;
  string target = 2;
}

message AddPermissionResponse{
}

message RemovePermissionRequest{
  string object_id = 1;
  string target = 2;
}
message RemovePermissionResponse{
}

message Object{
  bytes plaintext = 1;
  bytes associated_data = 2;
}
